panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__generic__test_assignment_to_generic.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/generic/test_assignment_to_generic.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/generic/test_assignment_to_generic.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition value~2 `int` (27 `int`))
         (expression (assign `int` (value~2 `int`) (42 `int`)))
         (return (value~2 `int`)))))

----- stderr -----
