panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__generic__test_default_is_chosen_if_no_match.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/generic/test_default_is_chosen_if_no_match.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/generic/test_default_is_chosen_if_no_match.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition c~2 `char` (truncate `char` (0 `int`)))
         (return (42 `int`)))))

----- stderr -----
